# fs-encrypted

./: LICENSE.md  README.md  pyproject.toml  scratch.py
.github/workflows/: python-publish.yml
fs_encrypted/: encrypted_fs.py  opener.py  pathlike.py
tests/: test_fs-enc.py
