[tool.poetry]
name = "fs-encrypted"
version = "0.1.1"
description = "An encrypted filesystem for python using PYFilesystem2"
authors = ["patrick o'leary <pjaol@pjaol.com>"]
readme = "README.md"
homepage = "https://github.com/thevgergroup/fs-encrypted"
repository = "https://github.com/thevgergroup/fs-encrypted.git"
keywords = ["filesystem", "encryption", "pyfilesystem2"]
license = "MIT"
classifiers= [
                "Topic :: System :: Filesystems",
                "Topic :: Security :: Cryptography",  
                "Topic :: Security"
                ]

[tool.poetry.dependencies]
python = "^3.11"
fs = "^2.4.16"
cryptography = "^41.0.7"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
