[tool.poetry]
name = "fs-encrypted"
version = "0.0.0"
description = "An encrypted filesystem for python using PYFilesystem2"
authors = ["patrick o'leary <pjaol@pjaol.com>"]
readme = "README.md"
homepage = "https://github.com/thevgergroup/fs-encrypted"
repository = "https://github.com/thevgergroup/fs-encrypted.git"
keywords = ["filesystem", "encryption", "pyfilesystem2"]
license = "MIT"
classifiers= [
                "Topic :: System :: Filesystems",
                "Topic :: Security :: Cryptography",  
                "Topic :: Security"
                ]

[tool.poetry.dependencies]
python = "^3.9"
fs = "^2.4.16"
cryptography = ">=41.0.7,<44.0.0"

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.9"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"

[tool.poetry-dynamic-versioning]
enable = true
[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
